--- a/index.html
+++ b/index.html
@@ -153,7 +153,8 @@
 
 
   
-      Моделинг,настройка освещения
+      Командная работа с Любой Б. Моделинг, настройка материалов, настройка освещения.
+      Каюта отдыха на космическом корабле
 
 
 
