--- a/index.html
+++ b/index.html
@@ -310,7 +310,32 @@
 
 
     
-   
+     <!-- Отсюда начинается шаблон для Sketchfab -->
+    <div class="carousel-item green white-text formatter" href="#two!"><div class="title-container"><h2>
+
+
+      Меч
+
+    
+    </h2><p class="white-text">
+
+
+  
+      материалы,моделинг
+
+
+
+      <!-- Чтобы поменять адрес просто замените непонятный набор букв после /models/... на тот что указан в адресной строке после /models/
+        Но ?preload=1 должно остаться! -->
+    </p></div>
+    <div class="sketchfab-embed-wrapper"><iframe width="100%" class="formatter youtube-iframe" src="https://sketchfab.com/models/176af3db62ba4accb88a30bf8c99600b/embed?preload=1" frameborder="0" allow="autoplay; fullscreen; vr" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe></div></div>
+    <!-- Тут заканчивается шаблон для Sketchfab -->
+
+
+
+
+
+
 
 
 
